[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/prompt_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/LevelSelectItem.gd" type="Script" id=2]

[node name="LevelSelectItem" type="Button"]
margin_right = 228.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 228.0
size_flags_vertical = 0

[node name="LevelName" type="Label" parent="HBoxContainer"]
margin_top = 3.0
margin_right = 31.0
margin_bottom = 12.0
theme = ExtResource( 1 )
text = "Level 1"
valign = 1

[node name="Spacing" type="Label" parent="HBoxContainer"]
margin_left = 35.0
margin_top = 3.0
margin_right = 165.0
margin_bottom = 12.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="HighScore" type="Label" parent="HBoxContainer"]
margin_left = 169.0
margin_top = 3.0
margin_right = 202.0
margin_bottom = 12.0
theme = ExtResource( 1 )
text = "Score 4"
valign = 1

[node name="FastestTime" type="Label" parent="HBoxContainer"]
margin_left = 206.0
margin_top = 3.0
margin_right = 228.0
margin_bottom = 12.0
theme = ExtResource( 1 )
text = "00:00"
valign = 1

[connection signal="pressed" from="." to="." method="_on_LevelSelectItem_pressed"]
